# site-audit-ai-be

./: .cz.toml  .env.example  .gitignore  .pre-commit-config.yaml  PASSWORD_RESET_README.md  README.md  debug_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  seed_fake_scan.py  site_audit_db.sqlite  site_audit_db.sqlite3  test_db_url.py  test_result.json
.github/: pull_request_template.md
.github/workflows/: branch-name-check.yml  cd_disabled_prod.yml  cd_prod.yml  cd_staging.yml  cd_staging.yml.disabled  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  4a468c70c14a_create_oauth_table.py  52703131e202_remove_uuid_default.py  574a55086562_initial_migrations.py  6888d4c4a86d_new_revision.py  68cfb4b2a5d0_add_otp_rate_limiting_fields.py  6ccb45637908_initial_migrations.py  7523d06a1fb7_add_phone_and_profile_picture_to_users.py  835061ae8886_create_users_and_oauth_tables.py  88409ed6529a_merge_migration_heads.py  8a3057545513_add_referral_fields_to_waitlist.py  8fa912a8cb79_initial_migrations.py  a82663bc85b7_create_waitlist_table.py  c489e27dd5f2_initial.py
app/: main.py
app/api/v1/: __init__.py  endpoints.py
app/api_routers/: v1.py
app/core/: config.py
app/db/: session.py
app/features/admin/models/: admin.py
app/features/admin/routes/: __init__.py  auth.py  dashboard.py  share_message.py
app/features/admin/schemas/: __init__.py  auth.py  dashboard.py  share_message.py
app/features/admin/services/: auth.py  dashboard.py  share_message.py
app/features/admin/utils/: admin_creator.py  auth.py  create_super_admin.py
app/features/audit/routes/: audit.py
app/features/audit/schemas/: audit.py
app/features/audit/services/: audit.py
app/features/audit/utils/: page_analyzer.py  test_content.py
app/features/auth/: endpoints.py
app/features/auth/models/: __init__.py  oauth.py  token.py  user.py  user_settings.py  users.py  verify_email.py
app/features/auth/routes/: auth.py  oauth.py  users.py  verify_email.py
app/features/auth/schemas/: __init__.py  auth.py  oauth.py  password_reset.py  user.py  verify_email.py
app/features/auth/services/: __init__.py  auth_service.py  auth_services.py  email_service.py  oauth_service.py  password_reset.py  user_service.py  verify_email.py
app/features/auth/template/: account_deleted.html  base_email.html  reset_password.html  review_request_confirmation.html  verification_code.html  welcome_activation.html  welcome_email.html
app/features/auth/utils/: __init__.py  emailer.py  oauth.py  password.py  security.py  username_generator.py  verify.py
app/features/health/: endpoints.py
app/features/health/routes/: health.py
app/features/leads/models/: lead_model.py
app/features/leads/routes/: lead_route.py
app/features/leads/schemas/: lead_schema.py
app/features/leads/services/: lead_service.py
app/features/leads/template/: lead_admin_notification.html  lead_confirmation.html
app/features/notifications/models/: notifications.py
app/features/notifications/routes/: notifications.py  (+1 more)
app/features/scan/: README.md
app/features/waitlist/: endpoints.py
app/middlewares/: rate_limit.py
app/page_extractor/routes/: extractor_router.py
app/platform/: async_db_helper.py  celery_app.py  config.py  exceptions.py  logger.py  response.py  schemas.py  websocket_auth.py  websocket_manager.py
app/platform/cache/: redis.py
app/platform/db/: __init__.py  base.py  session.py
app/platform/services/: email.py  sse_helper.py
app/platform/utils/: device.py  file_upload.py  rate_limit.py  url_validator.py
deploy/nginx/: site-audit-ai.conf.tpl
deploy/systemd/: site-audit-ai.service.tpl
docs/: API_RESPONSES.md  URL_DISCOVERY.md  celery_rabbitmq_lecture.txt  site_audit_celery_flow.txt
scripts/: check_branch_name.sh  create_tables.py  reset_quotas.py  start_feature.py
site_audit_ai_be.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/uploads/profile-pictures/: .gitkeep
tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_forget_password.py  test_forgot_password.py  test_health.py  test_login.py  test_logout.py  test_oauth.py  test_oauth_service.py  test_password_reset.py  test_protected_endpoints.py  test_rate_limit.py  test_resend_token.py  test_resend_verification.py  test_reset_password.py  test_scraping.py  test_signup.py  test_site_email_association.py  test_sites.py  test_url_discovery.py  test_user_service.py  test_verify_email  test_waitlist.py  test_websocket.py
tests/features/scan/: test_extractor_service.py  test_scraping_extraction_integration.py
tests/features/scraping/: test_scraping.py  test_scraping_service.py
tests/features/sites/: test_delete_site.py
(+123 files in other folders)
