[project]
name = "site-audit-ai-be"
version = "0.1.0"
description = "Sitelytics Backend Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Database & ORM
    "aiosqlite>=0.21.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.30.0",
    "sqlalchemy==2.0.44",
    "alembic>=1.17.2",
    # Async HTTP & Networking
    "httpx>=0.28.1",
    "httpcore>=1.0.9",
    "websockets==15.0.1",
    # Web Framework
    "fastapi==0.121.2",
    "starlette==0.49.3",
    "uvicorn==0.38.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.10.1",
    "bcrypt>=5.0.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0.0",
    # Validation & Settings
    "pydantic[email]==2.12.4", # ✅ Enables EmailStr
    "pydantic-core==2.41.5",
    "pydantic-settings==2.11.0",
    "email-validator==2.2.0", # Required by pydantic[email]
    # Caching / Rate Limiting
    "redis>=5.0.0", # ✅ Modern Redis (v4.5+ is old; v5+ recommended)
    # Utils
    "python-dotenv==1.2.1",
    "uuid7>=0.1.0", # ✅ For time-ordered UUIDs (better than uuid4)
    "uuid6>=2025.0.1",
    "uuid-extension>=0.2.0",
    "jinja2==3.1.6",
    "click==8.1.8",
    "anyio==4.11.0",
    "sniffio==1.3.1",
    "idna==3.11",
    "certifi==2025.11.12",
    # Dev/Testing (kept minimal in prod deps, but okay if used in CI)
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pre-commit==4.3.0",
    # Others (non-critical, but used)
    "annotated-types==0.7.0",
    "typing-extensions==4.15.0",
    "watchfiles==1.1.1",
    "ruff==0.14.5",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.1",
]

# ------------------------
# RUFF CONFIG
# ------------------------
[tool.ruff]
line-length = 100
target-version = "py311"  # ✅ Updated to match requires-python

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ------------------------
# DEPENDENCY GROUPS
# ------------------------
[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pre-commit==4.3.0",
    "ruff==0.14.5",
]
